<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginRight="54dip" >
    
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/left_iv_userhead"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/userhead" />
        
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/left_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="wqoka" />

            <TextView
                android:id="@+id/left_tv_userlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="52,8" />
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/l1"
        android:paddingLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
   
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/left_iv_support" />

                <Button
                    android:id="@+id/left_btn_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="15sp"
                    android:background="@drawable/selector_top_button"
                    android:text="@string/supportopt" />
                

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/left_tv_supportnum"
                    android:layout_width="40dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/left_bg_topnum"
                    android:text="@string/supportoptnum" />
                
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/left_iv_discuss" />

                <Button
                    android:id="@+id/left_btn_discuss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="15sp"
                    android:background="@drawable/selector_top_button"
                    android:text="@string/discussopt" />
                

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/left_tv_discussnum"
                    android:layout_width="40dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/left_bg_topnum"
                    android:text="@string/discussoptnum" />
                
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/left_iv_share" />

                <Button
                    android:id="@+id/left_btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="15sp"
                    android:background="@drawable/selector_top_button"
                    android:text="@string/shareopt" />
                

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/left_tv_sharenum"
                    android:layout_width="40dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/left_bg_topnum"
                    android:text="@string/shareoptnum" />
                
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/left_iv_attention" />

                <Button
                    android:id="@+id/left_btn_attention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="15sp"
                    android:background="@drawable/selector_top_button"
                    android:text="@string/attentionopt" />
                

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/left_tv_attentionnum"
                    android:layout_width="40dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/left_bg_topnum"
                    android:text="@string/attentionoptnum" />
                
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/left_iv_recommend" />

                <Button
                    android:id="@+id/left_btn_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="15sp"
                    android:background="@drawable/selector_top_button"
                    android:text="@string/recommendopt" />
                

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/left_tv_recommendnum"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/left_bg_topnum"
                    android:text="@string/recommendoptnum" />
                
            </LinearLayout>
            
            
        </LinearLayout>
        
        
        
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/l2"
        android:orientation="vertical" >
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/divider_horizontal_line" >
    	</LinearLayout>
	
        <TextView 
            android:id="@+id/left_tv_personalsetting"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/selector_userinfo_button"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:textSize="15sp"
            android:text="@string/personalsetting" />
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/divider_horizontal_line" >
    	</LinearLayout>
 
 		<TextView 
 		    android:id="@+id/left_tv_accountsetting"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/selector_userinfo_button"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:textSize="15sp"
            android:text="@string/accountsetting" />
 		
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/divider_horizontal_line" >
    	</LinearLayout>
   
 		<TextView 
 		    android:id="@+id/left_tv_financialmanagement"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/selector_userinfo_button"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="48dp"
            android:textSize="15sp"
            android:text="@string/financialmanagement" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/l4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/l3"
        android:orientation="vertical" >

        <Button
            android:id="@+id/left_btn_recharge"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/selector_recharge_button"
            android:textSize="15sp"
            android:text="@string/recharge" />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="5dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amountofpay" />

            <EditText
                android:id="@+id/left_et_amountofpayment"
                style="@style/my_edittext_style"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_vertical"
                android:ems="10"
                android:inputType="numberDecimal" >

            </EditText>
            
            
		</LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waytopay" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/left_iv_alipay_logo" />
            
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/left_btn_pay"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:textSize="13sp"
                android:background="@drawable/selector_recharge_button"
                android:text="@string/suretopay" />
            
        </LinearLayout>
        
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/left_btn_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="@drawable/selector_exit_button"
            android:text="@string/exit" />
        
        
    </LinearLayout>

</RelativeLayout>
